// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Task Archived 1`] = `
<div
  className="list-item TASK_ARCHIVED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={true}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  />
</div>
`;

exports[`Storyshots Task Default 1`] = `
<div
  className="list-item TASK_INBOX"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a>
      <span
        aria-label="pinTask-1"
        className="icon-star"
        id="pinTask-1"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots Task Pinned 1`] = `
<div
  className="list-item TASK_PINNED"
>
  <label
    className="checkbox"
  >
    <input
      defaultChecked={false}
      disabled={true}
      name="checked"
      type="checkbox"
    />
    <span
      aria-label="archiveTask-1"
      className="checkbox-custom"
      id="archiveTask-1"
      onClick={[Function]}
    />
  </label>
  <div
    className="title"
  >
    <input
      readOnly={true}
      type="text"
      value="Test Task"
    />
  </div>
  <div
    className="actions"
    onClick={[Function]}
  >
    <a>
      <span
        aria-label="pinTask-1"
        className="icon-star"
        id="pinTask-1"
      />
    </a>
  </div>
</div>
`;

exports[`Storyshots TaskList Default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          className="checkbox-custom"
          id="archiveTask-1"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-1"
            className="icon-star"
            id="pinTask-1"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-2"
          className="checkbox-custom"
          id="archiveTask-2"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-2"
            className="icon-star"
            id="pinTask-2"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-3"
          className="checkbox-custom"
          id="archiveTask-3"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-3"
            className="icon-star"
            id="pinTask-3"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-4"
          className="checkbox-custom"
          id="archiveTask-4"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-4"
            className="icon-star"
            id="pinTask-4"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-5"
          className="checkbox-custom"
          id="archiveTask-5"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-5"
            className="icon-star"
            id="pinTask-5"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-6"
          className="checkbox-custom"
          id="archiveTask-6"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 6"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-6"
            className="icon-star"
            id="pinTask-6"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TaskList Empty 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    empty
  </div>
</div>
`;

exports[`Storyshots TaskList Loading 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="list-items"
  >
    loading
  </div>
</div>
`;

exports[`Storyshots TaskList With Pinned Tasks 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-1"
          className="checkbox-custom"
          id="archiveTask-1"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 1"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-1"
            className="icon-star"
            id="pinTask-1"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-2"
          className="checkbox-custom"
          id="archiveTask-2"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 2"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-2"
            className="icon-star"
            id="pinTask-2"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-3"
          className="checkbox-custom"
          id="archiveTask-3"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 3"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-3"
            className="icon-star"
            id="pinTask-3"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-4"
          className="checkbox-custom"
          id="archiveTask-4"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 4"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-4"
            className="icon-star"
            id="pinTask-4"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_INBOX"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-5"
          className="checkbox-custom"
          id="archiveTask-5"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 5"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-5"
            className="icon-star"
            id="pinTask-5"
          />
        </a>
      </div>
    </div>
    <div
      className="list-item TASK_PINNED"
    >
      <label
        className="checkbox"
      >
        <input
          defaultChecked={false}
          disabled={true}
          name="checked"
          type="checkbox"
        />
        <span
          aria-label="archiveTask-6"
          className="checkbox-custom"
          id="archiveTask-6"
          onClick={[Function]}
        />
      </label>
      <div
        className="title"
      >
        <input
          readOnly={true}
          type="text"
          value="Task 6 (pinned)"
        />
      </div>
      <div
        className="actions"
        onClick={[Function]}
      >
        <a>
          <span
            aria-label="pinTask-6"
            className="icon-star"
            id="pinTask-6"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
